Some spacing fixes

--- a/modules/discovery.style.less
+++ b/modules/discovery.style.less
@@ -9,8 +9,8 @@
     padding-right: 0;
     border-bottom: 5px solid @blue;
     padding-bottom: 16px;
-    margin-top: 23px;
-    margin-bottom: 43px;
+    margin-top: 70px;
+    margin-bottom: 70px;
 
     > h2 {
         background: @blue;
@@ -65,7 +65,6 @@
             width: 24.1%;
             display: inline-block;
             vertical-align: top;
-            padding: 25px 15px 10px 15px;
             height: auto;
 
             &:first-child {
@@ -78,8 +77,10 @@
 
             .discovery-link {
                 display: block;
-                text-decoration: none !important;
-
+				text-decoration: none !important;
+				padding: 25px 15px 25px 15px;
+				height: 100%;
+					
                 .discovery-text {
                     color: @blue;
                     font-weight: bold;
